# io_wrapper_statistics

./: CHANGELOG.md  Cargo.toml  README.md
examples/: bufread_assert_seek_zero.rs  bufread_assert_stream_position.rs  bufread_reduced_read_count.rs
src/: lib.rs
tests/: wrapper_test.rs
